fix(Box): don't use CSS variables for spacing as they can be inherited

--- a/src/Box/styles.css
+++ b/src/Box/styles.css
@@ -1,15 +1,4 @@
 .fx-box {
   display: block;
   box-sizing: border-box;
-
-  padding-top: var(--p, var(--pt, var(--py, 0)));
-  padding-bottom: var(--p, var(--pb, var(--py, 0)));
-  padding-left: var(--p, var(--pl, var(--px, 0)));
-  padding-right: var(--p, var(--pr, var(--px, 0)));
-
-  margin: var(--m, 0);
-  margin-top: var(--mt, var(--my, 0));
-  margin-bottom: var(--mb, var(--my, 0));
-  margin-left: var(--ml, var(--mx, 0));
-  margin-right: var(--mr, var(--mx, 0));
 }
